                    Changes made to Pyjamas since 0.7
                    ---------------------------------

 * Series of fixes by W Kornewald: #229, #385, #414, #417, #475 and more.
   accidental exception catching in debug handling sorted; class creation
   uses __class__ on the base (behaves like http://python.org); added
   __delattr__ support; extended tracebacks to include module imports.

 * Fix long-standing bug with DialogBox: use an overlay to capture all
   mouse events.  use same overlay trick in Controls so that slider
   capture now works, too.

 * Enable asynchronous loading of modules during bootstrap for -m build
   flag (pyjs); new controller allows for custom bootsplash/early-user
   javascript code; add bootsplash example.  by C Anthony Risinger

 * Add DOM.createTextNode function, thanks to Jordon Wii

 * Fix issue in GWTCanvas Transparency demo, thanks to Alex Tsepkov

 * Add infrastructure for registering alternative JS functions for
   native javascript inline output, by W Kornewald

 * Added example dynamic CSS stylesheet changer, thanks to Stolati
   for the CSS changing class.

 * Fixes to pyjslib for compatibility with Dean Edwards' JS Packer
   (http://dean.edwards.name/packer/) by Angelo Mottola

 * Added default style name to MenuBar, by Serge Tarkovski 

 * Added makeCloseable and centring to DialogBox, by Serge Tarkovski 

 * Added default style to CaptionPanel, by Serge Tarkovski 

 * Added log10 to math module

 * Added "glass" opaque background option to PopupPanel, by Serge Tarkovski 

                    Changes made to Pyjamas since 0.6
                    ---------------------------------

 * Added string zfill function, thanks to Angelo Motolla.

 * Added datetime module, thanks to Angelo Motolla.

 * Added issubclass, thanks to Daniel Gerber

 * Off-by-one bug in datetime on months, fixed by Russell Yanofsky

 * Fix for menu highlighting by Pavel Mironchyk

 * Add initial port of python logging module