@@ -70,6 +70,10 @@ Copyright: 2010 Waldemar Kornewald <wkornewald@gmail.com>
 Copyright: 2010 legith.fairplay@gmail.com
 Copyright: 2010 Jordan Wii <jordonwii@gmail.com>
 
+Files: contrib/pyjscompressor.py
+Copyright: 2010 Sujan Shakya, suzan.shakya@gmail.com
+License: Apache
+
 Files: examples/flowpanel/*
 Copyright: 2009 jordonwii (http://code.google.com/u/jordonwii)
 License: Apache
